# UCC_ProyectoFinal_Alfei_Carrizo_Bocco

./: Autorr.h  CMakeLists.txt  Comentario.h  Noticia.h  Persona.h  README.md  Usuario.h  main.cpp  main.h
