cmake_minimum_required(VERSION 3.27)
project(UCC_ProyectoFinal_Alfei_Carrizo_Bocco)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(UCC_ProyectoFinal_Alfei_Carrizo_Bocco
        main.cpp
        README.md
        Noticia.h
        Autorr.h
        Usuario.h
        Comentario.h
        Persona.h)